--- a/articles/设计模式/命令模式.md
+++ b/articles/设计模式/命令模式.md
@@ -3,5 +3,109 @@
 
 #### 应用场景: 有时候需要向某些对象发送请求，但是并不知道请求的接收者是谁，也不知道被请求的操作是什么；此时希望用一种松耦合的方式来设计程序，使得请求发送者和请求接收者能够消除彼此之间的耦合关系。
 
+#### 1.使用命令模式来实现播放录像功能
+在`HTML`页面创建如下：
 
+```html
+<html>
+  <body>
+    <button id="replay">播放录像</button>
 
+    <script type="text/javascript">
+      let Ryu = {
+        attack: ()=>{
+          console.log('攻击');
+        },
+        defense: ()=>{
+          console.log('防御');
+        },
+        jump: ()=>{
+          console.log('跳跃');
+        },
+        crouch: ()=>{
+          console.log('蹲下');
+        }
+      }
+
+      let makeCommand = (receiver, state)=>{
+        //创建命令
+        return ()=>{
+          receiver[state]()
+        }
+      };
+      //创建键值数字对应Ryu对象中方法
+      let commands = {
+        "119": "jump",   // W
+        "115": "crouch", // S
+        "97": "defense", // A
+        "100": "attack"  // D
+      }
+
+      let commandStack = []; //保存命令堆栈
+      document.onkeypress = (ev)=>{
+        let keyCode = ev.keyCode;
+        command = makeCommand(Ryu, commands[ keyCode ]);
+        if(command){
+          command() //执行命令
+          commandStack.push( command ); //将刚才执行过命令会保存进入堆栈中
+        }
+      }
+      
+      document.getElementById( 'replay' ).onclick = ()=>{ 
+        let command;
+        //从堆栈里依次取出命令并执行
+        while(command = commandStack.shift()){
+          command();
+        }
+      }
+
+    </script>
+  </body>
+</html>
+```
+
+#### 2.使用命令模式来实现宏命令,创建好各种命令(command)
+
+```js
+let closeDoorCommand = {
+  execute: ()=>{
+    console.log('关门')
+  }
+}
+
+let openPcCommand = {
+  execute: ()=>{
+    console.log('开电脑')
+  }
+}
+
+let openQQCommand = {
+  execute: ()=>{
+    console.log('登录QQ')
+  }
+}
+
+//定义宏命令
+let MacroCommand = ()=>{
+  return {
+    commandsList: [], //空数组，用来保存堆栈里
+    //add方法表示将子命令添加进宏命令对象
+    add: function( command ){
+      this.commandsList.push( command )
+    },
+    //当调用宏命令对象的execute方法时，会迭代这个一组宏命令对象，并执行它们的execute方法
+    execute: function(){
+      for( let i=0,command; command = this.commandsList[i++]; ){
+        command.execute();
+      }
+    }
+  }
+}
+
+let macroCommand = MacroCommand();
+macroCommand.add( closeDoorCommand );
+macroCommand.add( openPcCommand );
+macroCommand.add( openQQCommand );
+macroCommand.execute();
+```
+以上代码来源是**javascript设计模式与开发实践**的`code`作为参考,值得我们学习的。
