--- a/articles/基础篇/算法解析.md
+++ b/articles/基础篇/算法解析.md
@@ -8,5 +8,29 @@
 所以总结起来通用公式为：<br/>
 ![bit-operation](https://github.com/MoonCheung/Web-diary/blob/master/static/Images/bit-operation-1.gif)<br/>
 2. 例如：十进制如何转二进制 <br/>
-十进制整数转换为二进制整数采用"除2取余，逆序排列"法。具体做法:用2整除十进制整数，可以得到一个商和余数；再用2去除商，又会得到一个商和余数，如此进行，直到商为小于1时为止，然后把先得到的余数作为二进制数的低位有效位，后得到的余数作为二进制数的高位有效位，依次排列起来。
-如：255=(11111111)B
+十进制整数转换为二进制整数采用**除2取余，逆序排列**法。具体做法:用2整除十进制整数，可以得到一个商和余数；再用2去除商，又会得到一个商和余数，如此进行，直到商为小于1时为止，然后把先得到的余数作为二进制数的低位有效位，后得到的余数作为二进制数的高位有效位，依次排列起来。`如：255=(11111111)B`
+
+#### 左移<< <br/>
+```js
+10 << 1 //-> 10在二进制表示为1010，计算左移1位等于10100，然后再次转换十进制得到20
+```
+#### 右移>> <br/>
+```js
+13 >> 1 // -> 十进制13看成12+1，12在二进制表示为‭1100‬，计算右移1位等于110，然后再次转换十进制得到6
+```
+#### 按位操作
+按位与 <br/>
+> 每一位都为1，结果才为1, 否则为0
+```js
+10 & 8 // -> 1010 & 1000 == 1000 -> 8
+```
+按位或 <br/>
+> 其中一位为1，结果就是1, 否则为0
+```js
+10 | 8 // -> 1010 | 1000 == 1010 -> 10
+```
+按位异或 <br/>
+> 每一位都不同，结果才为1, 否则为0
+```js
+15 ^ 5 // -> ‭1111‬ ^ ‭0101‬ == 1010‬ -> 10
+```
