--- a/articles/设计模式/发布-订阅模式.md
+++ b/articles/设计模式/发布-订阅模式.md
@@ -1,9 +1,11 @@
+<!-- markdownlint-disable -->
 ### 发布-订阅模式
 > 发布-订阅模式又叫观察者模式，它定义对象间的一种一对多的依赖关系，当一个对象的状态发生改变时，所有依赖于它的对象都将得到通知。<br/>
 > 优点：在异步函数完成更松耦合代码编写，一为时间上的解耦，二为对象之间的解耦。<br/>
 > 缺点：创建订阅者本身要消耗一定的时间和内存。<br/>
 
 #### 1. 实现通用发布-订阅事件：
+
 ```js
 //所以我们把发布—订阅的功能提取出来，放在一个单独的对象内：
 const event = {
@@ -70,4 +72,5 @@ salesOffices.remove('小明88', fn1); //删除小明订阅该消息
 salesOffices.trigger('小明88', 20000); //输出20000
 salesOffices.trigger('小红110', 30000); //输出30000
 ```
+
 以上代码来源是**javascript设计模式与开发实践**的`code`作为参考,值得我们学习的。
