--- a/articles/设计模式/命令模式.md
+++ b/articles/设计模式/命令模式.md
@@ -1,3 +1,4 @@
+<!-- markdownlint-disable -->
 ### 命令模式
 > 命令模式是简单和优雅的模式之一，命令模式中的命令(command)指的是一个执行某些特定事情的指令。
 
@@ -108,4 +109,5 @@ macroCommand.add( openPcCommand );
 macroCommand.add( openQQCommand );
 macroCommand.execute();
 ```
+
 以上代码来源是**javascript设计模式与开发实践**的`code`作为参考,值得我们学习的。
