--- a/articles/基础篇/模块化方案.md
+++ b/articles/基础篇/模块化方案.md
@@ -63,5 +63,4 @@ export {
 import  { one, two }  three from 'a.js'
 ```
 
-
-摘取以上AMD，CMD，UMD的内容来自原文[Github](https://github.com/Advanced-Frontend/Daily-Interview-Question/issues/28)
+摘取以上**AMD，CMD，UMD**的内容来自原文[Github](https://github.com/Advanced-Frontend/Daily-Interview-Question/issues/28)
